tests/negative/gold/final_field3_test.gold
tests/negative/final_field3_test.toit:11:11: error: Can't assign to final field 'field'
  a.field = 499
          ^
